gen/bigquery/v2/cargo-errors.log
    Checking google-bigquery2 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/bigquery/v2/lib)
error[E0412]: cannot find type `ListStateFilterItems` in module `crate::resources::jobs::params`
    --> bigquery/v2/lib/src/lib.rs:6787:70
     |
6787 |             state_filter: Option<Vec<crate::resources::jobs::params::ListStateFilterItems>>,
     |                                                                      ^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::jobs::params`

error[E0412]: cannot find type `ListStateFilterItems` in module `crate::resources::jobs::params`
    --> bigquery/v2/lib/src/lib.rs:6838:70
     |
6838 |                 value: impl Into<Vec<crate::resources::jobs::params::ListStateFilterItems>>,
     |                                                                      ^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::jobs::params`

error[E0072]: recursive type `schemas::QueryParameterType` has infinite size
    --> bigquery/v2/lib/src/lib.rs:2812:5
     |
2812 |     pub struct QueryParameterType {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ recursive type has infinite size
...
2815 |         pub array_type: ::std::option::Option<crate::schemas::QueryParameterType>,
     |         ------------------------------------------------------------------------- recursive without indirection
     |
     = help: insert indirection (e.g., a `Box`, `Rc`, or `&`) at some point to make `schemas::QueryParameterType` representable

error[E0072]: recursive type `schemas::StandardSqlDataType` has infinite size
    --> bigquery/v2/lib/src/lib.rs:3457:5
     |
3457 |     pub struct StandardSqlDataType {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ recursive type has infinite size
...
3460 |         pub array_element_type: ::std::option::Option<crate::schemas::StandardSqlDataType>,
     |         ---------------------------------------------------------------------------------- recursive without indirection
     |
     = help: insert indirection (e.g., a `Box`, `Rc`, or `&`) at some point to make `schemas::StandardSqlDataType` representable

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0072, E0412.
For more information about an error, try `rustc --explain E0072`.
error: Could not compile `google-bigquery2`.

To learn more, run the command again with --verbose.
